syntax = "proto3";
package book.v1;
import "google/protobuf/timestamp.proto";
option go_package = "github.com/znbang/eventmap/internal/gen/book/v1;bookv1";

service BookService {
  rpc CreateBook (CreateBookRequest) returns (CreateBookResponse);
  rpc UpdateBook (UpdateBookRequest) returns (UpdateBookResponse);
  rpc DeleteBook (DeleteBookRequest) returns (DeleteBookResponse);
  rpc DeleteChapter(DeleteChapterRequest) returns (DeleteChapterResponse);
  rpc GetBook (GetBookRequest) returns (GetBookResponse);
  rpc GetToc (GetTocRequest) returns (GetTocResponse);
  rpc GetChapter (GetChapterRequest) returns (GetChapterResponse);
  rpc ListBook(ListBookRequest) returns (ListBookResponse);
  rpc SyncNew(SyncNewRequest) returns (SyncNewResponse);
  rpc SyncAll(SyncAllRequest) returns (SyncAllResponse);
  rpc StopSync(StopSyncRequest) returns (StopSyncResponse);
  rpc SyncStatus(SyncStatusRequest) returns (stream SyncStatusResponse);
  rpc DownloadBook(DownloadBookRequest) returns (DownloadBookResponse);
}

message Book {
  string id = 1;
  string user_id = 2;
  string title = 3;
  string author = 4;
  string url = 5;
  BookJob job = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message Chapter {
  string id = 1;
  string book_id = 2;
  int32 page = 3;
  string url = 4;
  string title = 5;
  string body = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message BookJob {
  string id = 1;
  BookJobStatus status = 2;
  string book_id = 3;
  string message = 4;
  google.protobuf.Timestamp created_at = 5;
}

enum BookJobStatus {
  BOOK_JOB_STATUS_DONE_UNSPECIFIED = 0;
  BOOK_JOB_STATUS_PENDING = 1;
  BOOK_JOB_STATUS_RUNNING = 2;
}

message CreateBookRequest {
  string title = 1;
  string author = 2;
  string url = 3;
}

message CreateBookResponse {
  string id = 1;
}

message UpdateBookRequest {
  string id = 1;
  string title = 2;
  string author = 3;
  string url = 4;
}

message UpdateBookResponse {
  string id = 1;
}

message DeleteBookRequest {
  string id = 1;
}

message DeleteBookResponse {
}

message DeleteChapterRequest {
  string id = 1;
  int32 page = 2;
}

message DeleteChapterResponse {
}

message GetBookRequest {
  string id = 1;
}

message GetBookResponse {
  Book book = 1;
}

message GetTocRequest {
  string id = 1;
  int32 page = 2;
  int32 size = 3;
}

message GetTocResponse {
  Book book = 1;
  int32 page = 2;
  int32 size = 3;
  int32 total = 4;
  repeated Chapter items = 5;
}

message GetChapterRequest {
  string id = 1;
  int32 page = 2;
}

message GetChapterResponse {
  Book book = 1;
  Chapter chapter = 2;
  int32 page = 3;
  int32 total = 4;
}

message ListBookRequest {
  int32 page = 1;
  int32 size = 2;
  string filter = 3;
}

message ListBookResponse {
  int32 page = 1;
  int32 size = 2;
  int32 total = 3;
  repeated Book items = 4;
}

message SyncNewRequest {
  string id = 1;
}

message SyncNewResponse {
}

message SyncAllRequest {
  string id = 1;
}

message SyncAllResponse {
}

message StopSyncRequest {
  string id = 1;
}

message StopSyncResponse {
}

message SyncStatusRequest {
}

message SyncStatusResponse {
  string id = 1;
  string message = 2;
  BookJobStatus status = 3;
}

message DownloadBookRequest {
  string id = 1;
}

message DownloadBookResponse {
  string title = 1;
  string content = 2;
}
